updating more details

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Bensenville, IL</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Singing, designing, arts and crafts.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To be an awesome an succesful software tester.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Bensenville, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It interest how webs are being develop and the procedures of it. I find it challenging but interesting and surely being a web developer will greatly help in my career.</p>
     </section>
 
     <footer id="footer">
